syntax = "proto3";

import "tchaxx-extensions.proto";

package test.bool;

message TestBoolValid {
  // leading flag comment
  bool flag = 1; // trailing flag comment
  repeated bool repeated_flags_attribute = 2 [(tchaxx.array_len) = 3];
}

message TestBoolInvalid {
  repeated bool repeated_flags_no_attribute = 1;
}
